Fix issue with overlapping rows in Our Mission and About Us Section by changing grid-template-rows to auto

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -105,7 +105,7 @@ h2 {
     clear: both;
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: 400px;
+    grid-template-rows: auto;
     grid-gap: 100px;
     padding: 30px;
     height: 100%;
